added spacing for ALL answer buttons for responsive

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <p class="card-text">This is the question you need to answer. Blue pill or Red Pill?</p>
                 <div class="text-center my-5">
                   <a href="#" class="btn my-1 btn-dark">Answer 1 - abcdefg</a>
-                  <a href="#" class="btn btn-dark">Answer 2 - abcdefg</a>
-                  <a href="#" class="btn btn-dark">Answer 3 - abcdefg</a>
-                  <a href="#" class="btn btn-dark">Answer 4 - abcdefg</a>
+                  <a href="#" class="btn my-1 btn-dark">Answer 2 - abcdefg</a>
+                  <a href="#" class="btn my-1 btn-dark">Answer 3 - abcdefg</a>
+                  <a href="#" class="btn my-1 btn-dark">Answer 4 - abcdefg</a>
                 </div>
             </div>
           </div>
