added a function in the script.js file to create the beginning card titel, question, and buttons

--- a/index.html
+++ b/index.html
@@ -17,26 +17,18 @@
     </nav>
 </head>
 <body>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row justify-content-md-center">
           <div class="col-md-auto card question">
             <div class="card-body">
-                <h5 id="title" class="card-title">Test your coding knowledges</h5>
-                <p id="question" class="card-text">Think you have what it takes to be a Web Developer?</p>
+                <h5 id="title" class="card-title"></h5>
+                <p id="question" class="card-text"></p>
                 <div id="button-area" class="text-center my-5">
-                  <button id = "btn1" class="btn mx-1 my-1 btn-dark">Answer 1 - abcdefg</a>
-                  <button id = "btn2" class="btn mx-1 my-1 btn-dark">Answer 2 - abcdefg</a>
-                  <button id = "btn3" class="btn mx-1 my-1 btn-dark">Answer 3 - abcdefg</a>
-                  <button id = "btn4" class="btn mx-1 my-1 btn-dark">Answer 4 - abcdefg</a>
+                  <!-- <button type="button" class="btn btn-danger mx-1 my-1" id = "btn1">Take the quiz, take the red pill</button>
+                  <button type="button" class="btn btn-primary mx-1 my-1" id = "btn2">Take more training, take the blue pill</button> -->
+                 
+
                 </div>
-                <!-- <h5 id="title" class="card-title">Question #1</h5>
-                <p id="question" class="card-text">This is the question you need to answer. Blue pill or Red Pill?</p>
-                <div id="answers" class="text-center my-5">
-                  <a href="#" id = "btn1" class="btn my-1 btn-dark">Answer 1 - abcdefg</a>
-                  <a href="#" id = "btn2" class="btn my-1 btn-dark">Answer 2 - abcdefg</a>
-                  <a href="#" id = "btn3" class="btn my-1 btn-dark">Answer 3 - abcdefg</a>
-                  <a href="#" id = "btn4" class="btn my-1 btn-dark">Answer 4 - abcdefg</a>
-                </div> -->
             </div>
           </div>
         </div>
