--- a/index.html
+++ b/index.html
@@ -1,40 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Quiz</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"/>
     <link rel="stylesheet" href="./styles/style.css" />
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Code Quiz <span style="color:rgb(78, 148, 194) ; font-size:.955rem" >High Scores</span></a>
-            <ul class="navbar-nav ml-auto">
-          <li>
-            <button class="btn btn-success my-2 my-sm-0 timer" type="submit">Start Timer: 100s</button>
-          </li>
-        </ul>
+      <a class="navbar-brand" href="#"
+        >Code Quiz
+        <span style="color: rgb(78, 148, 194); font-size: 0.955rem"
+          >High Scores</span></a>
+      <ul class="navbar-nav ml-auto">
+        <li>
+          <button class="btn btn-success my-2 my-sm-0 timer" type="submit">
+            Start Timer: 100s
+          </button>
+        </li>
+      </ul>
     </nav>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container mt-5">
-        <div class="row justify-content-md-center">
-          <div class="col-md-auto card question">
-            <div class="card-body">
-                <h5 id="title" class="card-title"></h5>
-                <p id="question" class="card-text"></p>
-                <div id="button-area" class="text-center my-5">                
-                  
-                </div>
-            </div>
+      <div class="row justify-content-md-center">
+        <div class="col-md-auto card question">
+          <div class="card-body">
+            <h5 id="title" class="card-title"></h5>
+            <p id="question" class="card-text"></p>
+            <div id="button-area" class="text-center my-5"></div>
           </div>
         </div>
       </div>
+    </div>
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <div>
+      <!-- Button trigger modal -->
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-toggle="modal"
+        data-target="#exampleModalCenter"
+      >
+        Launch demo modal
+      </button>
+      <!------------------------->
+      
+      <!-- Modal -->
+      <div
+      class="modal fade"
+      id="exampleModalCenter"
+      tabindex="-1"
+      role="dialog"
+      <!-- aria-labelledby="exampleModalCenterTitle"
+       -->aria-hidden="true"
+      >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenterTitle">
+              Game Over</h5>
+              <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+              >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h5>Thanks for Playing.</h5>
+            <div>
+              <label for="recipient-name" class="col-form-label">Enter your name:</label>
+              <input type="text" class="form-control" id="recipient-name">
+            </div>
+          </div>
+          <div class="modal-footer my-auto">
+            <div class="row">
+              <div class="col-sm my-auto">
+                <button type="button" class="btn btn-primary btn-lg btn-block">
+                      Play Again    
+                </button>
+              </div>
+              <div class="col-sm my-auto">
+                <button type="button" class="btn btn-secondary btn-lg btn-block" data-dismiss="modal">
+                  Submit and View High Scores
+                  </button>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+      <!------------------------->
+    </div>
+  </div>
+  
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
