--- a/scores.html
+++ b/scores.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Code Quis High Scores</title>
 </head>
 <body>
-    
+    <div id="h1">Code Quis High Scores</div>
 </body>
 </html>
