added code to set user name and score to localStorage and display that info on the hig scores page

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
             </button>
           </div>
           <div class="modal-body">
-            <h5>Thanks for Playing.</h5>
-            <div>
-              <label for="recipient-name" class="col-form-label">Enter your name:</label>
-              <input type="text" class="form-control" id="recipient-name">
+            <h5 class="game-over"></h5>
+            <h5 class="notify"></h5>
+            <div class="form-group">
+              <label for="player-name" class="col-form-label">Enter your name:</label>
+              <input id="player-name" type="text" class="form-control player-name">
             </div>
           </div>
           <div class="modal-footer my-auto">
