final commit. I couldn't append more than one play to localStorage

--- a/scores.html
+++ b/scores.html
@@ -31,16 +31,11 @@
                     <div class="card-body">
                         <div class="container">
                             <div class="row">
-                              <div id="player-name" class="col-sm">
-                                One of two columns
-                              </div>
-                              <div id="player-score" class="col-sm">
-                                One of two columns
-                              </div>
+                              <div id="player-name" class="col-sm"></div>
+                              <div id="player-score" class="col-sm"></div>
                             </div>
                           </div>
                     </div>
-
                 </div>
                 </div>
             </div>
