--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"
-        >Code Quiz
-        <span style="color: rgb(78, 148, 194); font-size: 0.955rem"
-          >High Scores</span></a>
+      <a class="navbar-brand" href="./scores.html">Code Quiz <span style="color: rgb(78, 148, 194); font-size: 0.955rem">High Scores</span></a>
       <ul class="navbar-nav ml-auto">
         <li>
           <button class="btn my-2 my-sm-0 timer" type="submit">
@@ -62,7 +59,7 @@
           </div>
           <div class="modal-body">
             <h5 class="game-over"></h5>
-            <h5 class="notify"></h5>
+            <h5 id="notify"></h5>
             <div class="form-group">
               <label for="player-name" class="col-form-label">Enter your name:</label>
               <input id="player-name" type="text" class="form-control player-name">
