--- a/scores.html
+++ b/scores.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"
-        >Code Quiz</a>
+      <a class="navbar-brand" href="#">Code Quiz</a>
       <ul class="navbar-nav ml-auto">
         <li>
         </li>
@@ -29,12 +28,23 @@
                 <div class="row justify-content-md-center">
                 <div class="col-md-auto card high-score">
                     <div class="card-body">
-                        <div class="container">
-                            <div class="row">
-                              <div id="player-name" class="col-sm"></div>
-                              <div id="player-score" class="col-sm"></div>
-                            </div>
-                          </div>
+                        <div class="container" id="leader-board">
+                          <table class="table table-dark">
+                            <thead>
+                              <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Player</th>
+                                <th scope="col">Score</th>
+                              </tr>
+                            </thead>
+                            <tbody id="leader-board-table">
+                            </tbody>
+                          </table>
+                          <button id="play-again" type="button" class="btn btn-primary">Close Scores and Play Again</button>
+                          <button id="clear-scores" type="button" class="btn btn-danger">Clear Scores</button>
+
+                        </div>
+                          
                     </div>
                 </div>
                 </div>
