added a check for empty player info in localStorage

--- a/scores.html
+++ b/scores.html
@@ -40,7 +40,7 @@
                             <tbody id="leader-board-table">
                             </tbody>
                           </table>
-                          <button id="play-again" type="button" class="btn btn-primary">Close Scores and Play Again</button>
+                          <button id="play-again" type="button" class="btn btn-primary">Play</button>
                           <button id="clear-scores" type="button" class="btn btn-danger">Clear Scores</button>
 
                         </div>
